src/test/ui/feature-gates/feature-gate-underscore_const_names.stderr
error[E0658]: naming constants with `_` is unstable
  --> $DIR/feature-gate-underscore_const_names.rs:6:1
   |
LL | / const _ : () = {
LL | |
LL | |     use std::marker::PhantomData;
LL | |     struct ImplementsTrait<T: Trt>(PhantomData<T>);
LL | |     let _ = ImplementsTrait::<Str>(PhantomData);
LL | |     ()
LL | | };
   | |__^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54912
   = help: add #![feature(underscore_const_names)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
